Bug 887676 - Always zero RegExp lastIndex upon failure to match. r=Waldo